<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.help.HelpFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_scrollEffect="compress"
        tools:context=".ui.help.HelpFragment">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/goal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_title"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <TextView
            android:id="@+id/goal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_text"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/how_to_play_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play_title"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <TextView
            android:id="@+id/how_to_play_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play_text"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tips_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <TextView
            android:id="@+id/tips_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_text"
            android:layout_margin="5dp"
            android:paddingBottom="10dp"/>

    </LinearLayout>
</ScrollView>