<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <card.andrew.dungeoncrawler.DungeonView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
    android:id="@+id/start_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/start_game"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/highest_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_score"
        app:layout_constraintTop_toBottomOf="@id/start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/recent_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_score"
        app:layout_constraintTop_toBottomOf="@id/highest_score_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/new_here_text_view"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/new_here"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>