<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.leaderboard.LeaderboardFragment">

    <TextView
        android:id="@+id/leaderboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_time_leaderboard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <ListView
        android:id="@+id/leaderboard_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/leaderboard_title"
        app:layout_constraintBottom_toTopOf="@id/filter_layout"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">

        <Spinner
            android:id="@+id/filter_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/filter_options"
            android:prompt="@string/select_filter" />

        <Button
            android:id="@+id/apply_filter_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply_filter" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>