<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BattleActivity">

    <ProgressBar
        android:id="@+id/enemy_health_bar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="false"
        android:progressDrawable="@drawable/hp_progress_bar"
        android:max="100"
        android:progress="100"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/enemy_hp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/enemy_health_bar"
        app:layout_constraintLeft_toLeftOf="@+id/enemy_health_bar"
        app:layout_constraintRight_toRightOf="@+id/enemy_health_bar"
        app:layout_constraintBottom_toBottomOf="@+id/enemy_health_bar"
        android:text="@string/hp"
        android:textSize="25sp" />


    <!-- circle for enemy at top right under their health bar -->
    <View
        android:id="@+id/enemy_circle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/enemy_health_bar"
        app:layout_constraintRight_toRightOf="@id/enemy_health_bar" />

    <TextView
        android:id="@+id/enemy_damage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="50sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/enemy_circle"
        app:layout_constraintLeft_toLeftOf="@+id/enemy_circle"
        app:layout_constraintRight_toRightOf="@+id/enemy_circle"
        app:layout_constraintBottom_toBottomOf="@+id/enemy_circle" />


    <ProgressBar
        android:id="@+id/player_health_bar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_margin="5dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/hp_progress_bar"
        android:max="100"
        android:progress="100"
        app:layout_constraintBottom_toTopOf="@id/button_layout"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/player_hp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/player_health_bar"
        app:layout_constraintLeft_toLeftOf="@+id/player_health_bar"
        app:layout_constraintRight_toRightOf="@+id/player_health_bar"
        app:layout_constraintBottom_toBottomOf="@+id/player_health_bar"
        android:text="@string/hp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/healed_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/you_healed"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/player_health_bar"
        app:layout_constraintLeft_toRightOf="@+id/player_health_bar" />


    <!-- circle for player over their health bar -->
    <View
        android:id="@+id/player_circle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/player_health_bar"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/player_damage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="50sp"
        android:visibility="gone"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/player_circle"
        app:layout_constraintLeft_toLeftOf="@+id/player_circle"
        app:layout_constraintRight_toRightOf="@+id/player_circle"
        app:layout_constraintBottom_toBottomOf="@+id/player_circle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/potions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/potions"
            app:layout_constraintRight_toLeftOf="@id/attack_button"
            app:layout_constraintTop_toTopOf="@+id/attack_button"/>


        <Button
            android:id="@+id/attack_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/attack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/flee_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flee"
            app:layout_constraintTop_toBottomOf="@id/attack_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/attack_button"
            app:layout_constraintRight_toRightOf="@+id/attack_button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>